tests/types/errors/import_native_handle_binding_type_mismatch.mog
#!strict
const { create: fn(i64) handle<examples:math:CounterHandle> } =
    @import("examples:counter")
